@@ -1,0 +1,6 @@
+If soneone missing please let us(Martin Weber <martweb@gmx.net>
+or Masatake YAMATO  <yamato@redhat.com>) know.
+
+---
+Magick input is contributed by <Johannes.Schindelin@gmx.de>.
+PNG input is contributed by MenTaLguY <mental@rydia.net>.
